# exercism-rust

./: Cargo.toml  download_exercise.sh
anagram/.exercism/: metadata.json
anagram/src/: lib.rs
armstrong-numbers/.exercism/: metadata.json
armstrong-numbers/src/: lib.rs
assembly-line/.exercism/: metadata.json
assembly-line/src/: lib.rs
beer-song/.exercism/: metadata.json
beer-song/src/: lib.rs
bob/: README.org
bob/.exercism/: metadata.json
bob/src/: lib.rs
clock/.exercism/: metadata.json
clock/src/: lib.rs
difference-of-squares/.exercism/: metadata.json
forth/.exercism/: metadata.json
forth/src/: lib.rs
forth/tests/: forth.rs
gigasecond/.exercism/: metadata.json
gigasecond/src/: lib.rs
grains/.exercism/: metadata.json
grains/src/: lib.rs
health-statistics/.exercism/: metadata.json
leap/.exercism/: metadata.json
low-power-embedded-game/.exercism/: metadata.json
low-power-embedded-game/src/: lib.rs
luhn/.exercism/: metadata.json
luhn/src/: lib.rs
macros/.exercism/: metadata.json
macros/src/: lib.rs
magazine-cutout/.exercism/: metadata.json
magazine-cutout/src/: lib.rs
magazine-cutout/tests/: magazine-cutout.rs
minesweeper/.exercism/: metadata.json
minesweeper/src/: lib.rs
nth-prime/.exercism/: metadata.json
nth-prime/src/: lib.rs
parallel-letter-frequency/.exercism/: metadata.json
parallel-letter-frequency/benches/: benchmark.rs
parallel-letter-frequency/src/: lib.rs
poker/.exercism/: metadata.json
raindrops/: README.md
semi-structured-logs/: Cargo.toml
sum-of-multiples/: README.org
(+25 files in other folders)
